[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/2d/editor/SceneEditor.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/add.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/add_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/add_pressed.png" type="Texture" id=4]

[node name="SceneEditor" type="PanelContainer"]
anchor_bottom = 1.0
margin_right = 320.0
rect_clip_content = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 313.0
margin_bottom = 633.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 306.0
margin_bottom = 81.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 286.0
margin_bottom = 81.0
size_flags_horizontal = 3

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 27.0
size_flags_horizontal = 3
placeholder_text = "名称..."

[node name="Type" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 286.0
margin_bottom = 54.0
text = "质点"
items = [ "质点", null, false, 0, null, "磁场", null, false, 1, null, "电场", null, false, 2, null, "挡板", null, false, 3, null ]
selected = 0

[node name="Shape" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 286.0
margin_bottom = 81.0
text = "矩形"
items = [ "矩形", null, false, 0, null, "圆形", null, false, 1, null ]
selected = 0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 290.0
margin_top = 32.0
margin_right = 306.0
margin_bottom = 48.0
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 306.0
margin_bottom = 626.0
size_flags_vertical = 3
allow_rmb_select = true

[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Name" to="." method="_on_Add_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="add"]
[connection signal="item_rmb_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_rmb_selected"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
